# serial-sender

./: .gitignore  CMakeLists.txt  Readme.md  checkapi  checkftdi  main.cpp
binaries/aarch64/: serial-sender  test.txt
binaries/linux/: serial-sender
binaries/mac/: serial-sender  test.txt
osm6sender/: README.md  generate_osm_messages.py  osm6_ftdi_sender.py  osm6_ftdi_sender_2.py  osm6_serial_send.py
resources/: test.txt
sender/: CMakeLists.txt  send.cpp  send.h  sendGPIO.cpp  sendwin.cpp  sendwin.h
tests/: 01-test-data.cpp  CMakeLists.txt
